--- a/.github/workflows/testcafe.yml
+++ b/.github/workflows/testcafe.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Start HTTP server
+        run: npx http-server -p 8080
+
       - name: Run tests
         run: npm test
 
