--- a/.github/workflows/testcafe.yml
+++ b/.github/workflows/testcafe.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Start HTTP server
-        run: npx http-server -p 8080
+        run: npx http-server -p 8080 &
         background: true
 
   test:
