--- a/.github/workflows/testcafe.yml
+++ b/.github/workflows/testcafe.yml
@@ -25,8 +25,8 @@ jobs:
         run: npm install
 
       - name: Start HTTP server
-        run: npx http-server -p 8080 &
-        background: true
+        run: npx http-server -p 8080 > /dev/null 2>&1 &
+          echo "HTTP server started."
 
   test:
     needs: deploy
